--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "document-merger",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,14 +13,18 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^3.11.174",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.303.0",
-    "mammoth": "^1.6.0"
+    "mammoth": "^1.6.0",
+    "canvas-confetti": "^1.9.2",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "@types/canvas-confetti": "^1.6.4",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
